--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://sisfo03.vercel.app/" />
+		<meta property="og:url" content="https://informationsystem2303tukj.vercel.app/" />
 		<meta property="og:title" content="SI 23 03 TUKJ" />
 		<meta
 			property="og:description"
 			content="Selamat datang di halaman resmi kelas SI 23 03 Telkom University Jakarta! Mari mengenal lebih dekat tentang kami!" />
-		<meta property="og:image" content="https://sisfo03.vercel.app/Welcome.png" />
+		<meta property="og:image" content="hhttps://informationsystem2303tukj.vercel.app/Welcome.png" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content="https://sisfo03.vercel.app/" />
+		<meta property="twitter:url" content="https://informationsystem2303tukj.vercel.app/" />
 		<meta property="twitter:title" content="SI 23 03 TUKJ" />
 		<meta
 			property="twitter:description"
 			content="Selamat datang di halaman resmi kelas SI 23 03 Telkom University Jakarta! Mari mengenal lebih dekat tentang kami!" />
-		<meta property="twitter:image" content="https://sisfo03.vercel.app/Welcome.png" />
+		<meta property="twitter:image" content="https://informationsystem2303tukj.vercel.app/Welcome.png" />
 	</head>
 	<body>
 		<div id="root"></div>
